<resources>
    <!--General settings strings -->
    <string name="app_name">Painel de Aulas - UFRB</string>
    <string name="app_version">1.0.7</string>
    <string name="copyright">Copyright 2019 - UFRBuild</string>
    <string name="no_internet">Não há conexão com a internet.</string>
    <string name="action_settings">Settings</string>
    <string name="theme_key">DarkModeTheme</string>


    <string name="conte_ao_amigo_message">Olá, eu uso esse aplicativo.
        Painel de Aulas - UFRB permite que você mantenha sempre informado sobre suas reservas
        e data de devolução sem ter que acessar o sistema manualmente. E adivinha só ?
        tudo isso grátis! para baixar clique no link:
    </string>
    <string name="title_create_chooser_intent">Conte aos seus amigos</string>
    <string name="conte_aos_seus_amigos">Conte aos seus amigos</string>
    <string name="avaliar_esse_app">Avaliar esse app</string>
    <string name="icons_designed_by_freepik">Icons Designed by Freepik</string>


    <!--Screen DonateActivity-->
    <string name="toast_message_donePayment">Muito obrigado pela sua doação! Apreveite todos os novos recursos.</string>
    <string name="msg_error_services_googleplay">Os serviços de faturamento do Google Play não estão disponíveis.
    </string>
    <string name="title_unlock">CONTRIBUA VOCÊ TAMBÉM!</string>
    <string name="apio_message">Ajude a continuar mudando realidades! Faça sua doação para o App Painel de Aulas - UFRB,
        Contamos com sua ajuda.
    </string>
    <string name="sem_anuncios_label">Sem anúncios!</string>
    <string name="lembretes_de_devolu_o">As doações tem como objetivo acelerar o desenvolvimento desses recursos
        listados abaixo. Acelere essa etapa, contribua!
    </string>
    <string name="btn_doar_label">Doar R$ 1,99</string>
    <string name="btn_doar_label_more">Doar R$ 2,99</string>
    <string name="footer_message_unlock">Contribua e ajude-nos a manter este projeto</string>
    <string name="disciplinas_favoritas">Disciplinas Favoritas</string>
    <string name="lista_de_macardores">Lista de Marcadores</string>
    <string name="notifica_es_sobre_status">Notificações sobre status</string>
    <string name="notifica_es_sobre_eventos_e_palestras">Notificações sobre eventos e palestras</string>


    <!--Screen AboutActivity-->
    <string name="action_title_about">Sobre</string>
    <string name="photo_perfil_developer">
        https://instagram.fssa12-1.fna.fbcdn.net/vp/cce896b85044127233c832cf47068bb7/5DE1D65B/t51.2885-19/s320x320/67384353_350626775828953_3048186810216742912_n.jpg?_nc_ht=instagram.fssa12-1.fna.fbcdn.net
    </string>
    <string name="instagram_develper">https://www.instagram.com/mh4x0f_bomfim/</string>
    <string name="github_developer">https://github.com/mh4x0f</string>
    <string name="developer_name">Marcos Bomfim</string>
    <string name="github_repository">https://github.com/mh4x0f/Painel-Aulas-UFRB</string>
    <string name="github_license">https://github.com/mh4x0f/Painel-Aulas-UFRB/blob/master/LICENSE</string>
    <string name="github_policy">https://github.com/mh4x0f/Painel-Aulas-UFRB/blob/master/privacy_policy.md</string>
    <string name="photo_perfil_marcos_contributor">
        https://scontent-vie1-1.cdninstagram.com/vp/85e2f5fb0128b68fcbf56689bd2074fa/5DDED14A/t51.2885-19/67662848_2443823712515121_23058829008699392_n.jpg?_nc_ht=scontent-vie1-1.cdninstagram.com
    </string>
    <string name="photo_perfil_tassio_vale">https://avatars1.githubusercontent.com/u/10504806</string>
    <string name="url_base_googleplay_app">http://play.google.com/store/apps/details?id=</string>

    <!--Screen MainActivity-->
    <string name="locate_campus">local_campus</string>
    <string name="team_developers">UFRBuild</string>
    <string name="home_painel">Painel</string>
    <string name="home_favorites">Favoritos</string>
    <string name="home_settings">Configurações</string>
    <string name="home_about">Sobre</string>
    <string name="home_notification">Avisos</string>
    <string name="home_makator">Criar novo marcador</string>
    <string name="home_modo_escuro">Modo escuro</string>
    <string name="home_donate">Doar</string>
    <string name="home_feedback">Ajuda e Feedback</string>
    <string name="home_marcadores">MARCADORES</string>
    <string name="title_select_area">Qual sua localização?</string>
    <string name="title_name_dialog">Painel de Aulas</string>
    <string name="sub_title_emptyview">Por favor, verifique as informações sobre o local ou procure a portaria do Pavilhão de aulas.</string>
    <string name="title_emptyview">Nenhuma reserva encontrada!</string>
    <string name="msg_snack_no_intenet">Não há conexão com a internet.</string>
    <string name="msg_no_intenet">Parece que você não está conectado à internet. </string>
    <string name="sub_msg_no_intenet">Ocorreu um problema ao tentar carregar os dados. Verifique sua conexão e tente novamente</string>
    <string name="message_change_local_campus">Localização alterada.</string>
    <string name="message_update_disciplines">Lista de disciplinas atualizada.</string>
    <string name="sub_title_loadview">Por favor, aguarde uns instantes, estamos consultando as reservas disponíveis.</string>
    <string name="title_loadview">Consultando Reversas de Salas!</string>


    <!--    favorites fragment-->
    <string name="title_emptyview_favorites">Opus! Em Desenvolvimento!</string>
    <string name="sub_title_emptyview_favorites">Estamos trabalhando nesse recurso, aguedem...</string>

<!--    schedule fragment-->
    <string name="title_emptyview_schedule">Nenhuma disciplina encontrada!</string>
    <string name="sub_title_emptyview_schedule">Verifique se você definiu corretamente um horário para este dia.</string>


    <!--    monitors fragment-->
    <string name="title_emptyview_monitors">Nenhuma disciplina encontrada!</string>
    <string name="sub_title_emptyview_monitors">Verifique se você definiu corretamente um horário para este dia.</string>
    <string name="message_update_monitors">Lista de monitorias atualizada.</string>

    <!--    Screen NotificationActivity-->
    <string name="action_title_notification">Avisos</string>
    <string name="empty_notification_title">Ops! Sem notificações</string>

</resources>
