<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.about.AboutActivity">

    <include
            android:id="@+id/main_appbar_about"
            layout="@layout/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>
    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:color="?attr/backgroundcolor"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="?attr/cardbackground"
                    android:layout_height="match_parent" android:layout_marginBottom="8dp"
                    android:id="@+id/card_infor_app">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent" android:gravity="center_horizontal"
                        android:layout_margin="8dp">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/image_logo"
                            tools:ignore="VectorDrawableCompat" android:src="@mipmap/ic_launcher_foreground"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:textColor="?attr/item_disciplineTitle"
                            android:layout_height="wrap_content" android:id="@+id/textView3"
                            android:text="@string/app_name" android:textSize="18sp" android:textStyle="bold"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" android:gravity="center_horizontal">
                        <TextView
                                android:text="Versão:"
                                android:textColor="?attr/textcolor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/textView5"
                                android:layout_weight="1"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:textColor="?attr/textcolor"
                                android:layout_height="wrap_content" android:id="@+id/textView6"
                                android:layout_weight="1" android:text="@string/app_version"
                                android:paddingStart="4dp"/>
                    </LinearLayout>
                    <TextView
                            android:layout_width="match_parent"
                            android:textColor="?attr/textcolor"
                            android:layout_height="wrap_content" android:id="@+id/textView7"
                            android:gravity="center_horizontal" android:text="@string/copyright"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="?attr/cardbackground"
                    android:layout_height="match_parent" android:layout_marginBottom="8dp"
                    android:id="@+id/card_links">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                    <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:layout_margin="8dp"
                            android:id="@+id/rv_links"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="?attr/cardbackground"
                    android:layout_height="match_parent" android:layout_marginBottom="8dp"
                    android:id="@+id/card_developers">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:textColor="?attr/item_disciplineTitle"
                            android:layout_height="wrap_content" android:id="@+id/text_developer"
                            android:text="Desenvolvedor" android:textSize="14sp" android:textStyle="bold"
                            android:layout_margin="8dp"/>
                    <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:layout_margin="8dp"
                            android:id="@+id/rv_developers"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="?attr/cardbackground"
                    android:layout_height="match_parent" android:id="@+id/card_contributor"
                    android:layout_marginBottom="8dp">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:textColor="?attr/item_disciplineTitle"
                            android:layout_height="wrap_content" android:id="@+id/text_thanks"
                            android:text="Agradecimentos" android:textSize="14sp" android:textStyle="bold"
                            android:layout_margin="8dp"/>
                    <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:layout_margin="8dp"
                            android:id="@+id/rv_contributors"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="?attr/cardbackground"
                    android:layout_height="match_parent" android:layout_marginBottom="8dp"
                    android:id="@+id/card_licenses">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:textColor="?attr/item_disciplineTitle"
                            android:layout_height="wrap_content" android:id="@+id/text_license"
                            android:text="Licenças" android:textSize="14sp" android:textStyle="bold"
                            android:layout_margin="8dp"/>
                    <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:layout_margin="8dp"
                            android:id="@+id/rv_licenses"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>